--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
             "email": "hanzhiti1@163.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload":{
+        "psr-4":{
+            "jiaoluo\\model\\":" "
+        }
+    }
 }
